Fixed issue where Doctors section was bleeding into the section above (which was gallery). The issue was that the gallery section had a fixed height, so i removed the fixed height, and the bleed issue went away! and nothing else seemed to break. :)

--- a/css/main.css
+++ b/css/main.css
@@ -579,6 +579,17 @@ Common Styles
     height: 100px;
     width: 100px;
 }
+#element-to-animate-services-up-2 {
+    -moz-animation-delay: 0.2s;
+    -webkit-animation-delay: 0.2s;
+    -o-animation-delay: 0.2s;
+}
+#element-to-animate-services-up-3 {
+    -moz-animation-delay: 0.4s;
+    -webkit-animation-delay: 0.4s;
+    -o-animation-delay: 0.4s;
+}
+
 #gallery{ 
 	background: #efefef;
 }
@@ -876,6 +887,17 @@ ul.list-default li {
 	background-color: #00aeda;
 	border-color: #01a9d4;
 	color: #fff;
+}
+
+#element-to-animate-doctors-up-2 {
+    -moz-animation-delay: 0.2s;
+    -webkit-animation-delay: 0.2s;
+    -o-animation-delay: 0.2s;
+}
+#element-to-animate-doctors-up-3 {
+    -moz-animation-delay: 0.4s;
+    -webkit-animation-delay: 0.4s;
+    -o-animation-delay: 0.4s;
 }
 /* ------------------------------------------------------------------------------
 	 Testimonials
